# indigo_tools

./: Log.pm  README.md  _Deparsed_XSubs.pm  indigo_tools.pl  indigo_tools_ps2.pl  indigo_tools_ps2proto.pl  table_search.pl
ida/: demangle.pl  imp_xrefs_from.py  indigo_ida.py  rtti.py  scratch.py
imhex/: indigo_container.hexpat
indigo_decompiler/: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
indigo_decompiler/src/: main.c
